# calendar_backend

./: .gitignore  README.md  alembic.ini  pyproject.toml
.cursor/: repo_conventions.md
.cursor/commands/: add-defer-comment.md  add-repo-convention.md  audit-commit-readiness.md  build-plan-slice.md  commit-changes.md  db-revision-continue.md  db-revision-preview.md  draft-plan.md  explain-codepath.md  private-helper-diff.md  request-questions.md  review-abstractions.md  review-branch.md  review-consistency.md  review-validation.md  revise-plan.md  small-change.md
.cursor/rules/: 00-project-source-of-truth.mdc  01-repo-conventions.mdc  05-command-invocation-hygiene.mdc  10-layer-boundaries.mdc  15-abstraction-discipline.mdc  20-testing-and-checks.mdc  25-package-re-exports.mdc  30-planning-slices.mdc
calendar_backend/db/: __init__.py  session.py
calendar_backend/deletion/: conflict_analysis.py  conflict_suggestions.py  preview_service.py
calendar_backend/domain/: __init__.py  assignment.py  constraints.py  deletion.py  dtos.py  enums.py  errors.py  free_time.py  ids.py  invariant_validation.py  orchestration.py  plan_create.py  plan_traversal.py  repetitions.py  resolution.py  results.py  tasks.py  time.py
calendar_backend/models/: __init__.py  calendar.py  chains.py  constraints.py  free_time.py  plans.py  repetitions.py  runs.py  settings.py
calendar_backend/orchestration/: __init__.py  refresh_schedule.py
calendar_backend/scheduling/: decomposition.py  exact_cp_sat.py  feasibility.py  heuristic.py  input.py  types.py
calendar_backend/services/: __init__.py  app_settings.py  calendar_state.py  free_time_activity.py  free_time_assignment.py  goal.py  master_horizon.py  master_plan.py  plan_tree.py  plan_tree_invariant.py  repetition.py  task.py  task_assignment.py  (+2 more)
docs/: cursor_implementation_guide.md
tools/: __init__.py  cli_support.py  dev_cli.py
(+87 files in other folders)
